# nypc-perf

./: .gitignore  README.md
docs/: main.tex  references.bib
nypc-perf-rs/: Cargo.toml  README.md
nypc_perf/: Cargo.toml
nypc_perf/src/: lib.rs
src/: lib.rs
